# UB-1009

./: .gitignore  README.md  app.py  models.py  pyproject.toml
static/css/: style.css
static/js/: main.js
templates/: base.html  chat.html  chat_doctor.html  doctor_dashboard.html  index.html  login.html  main.html  patient_dashboard.html  result.html  welcome.html
