[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "fpdf>=1.7.2",
    "keras>=3.13.2",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "tensorflow>=2.20.0",
    "werkzeug>=3.1.6",
]
